
@startuml ERD

entity Project{
    * ProjectID : INT
    ProjectName : VARCHAR(255)
}

entity Nodes{
    * ProjectID : INT
    * NodeID : INT
    Name : VARCHAR(255)
    GraphicName : VARCHAR(255)
    ParentNode : INT
}

entity Annotations{
    * ProjectID : INT
    * NodeID : INT
    * AnnotationID : INT
    RichText : TEXT
    Polygon : TEXT
}

Project ||--o{ Nodes
Nodes ||--o{ Annotations

@enduml